Buttons and more

--- a/styles/app/themes/_main.scss
+++ b/styles/app/themes/_main.scss
@@ -35,5 +35,5 @@ code {
   line-height: var(--base-line-height);
   padding: $space-md $space-xl $space-md $space-md;
   // background-color: $black;
-  @extend .bg-midnight;
+  // @extend .bg-midnight;
 }
