--- a/styles/sass_framework/base/_colors.scss
+++ b/styles/sass_framework/base/_colors.scss
@@ -7,7 +7,7 @@
 }
 
 @mixin bg-classes() {
-  background: var(--bg-color);
+  background-color: var(--bg-color);
   color: var(--text-color);
   transition: color 200ms ease-in-out, background 200ms ease-in-out;
 }
