--- a/styles/sass_framework/utils/_flex.scss
+++ b/styles/sass_framework/utils/_flex.scss
@@ -5,8 +5,15 @@
   @each $flex-titles, $values2 in $values1 {
     @each $flex-spec, $flex-val in $values2 {
       .#{$flex-titles}-#{$flex-spec} {
-        @if ($flex-titles == 'gap') {
+        @if ($flex-titles == 'gap' or $flex-titles == 'gap-col') {
           --gap-offset: #{calc($flex-val / 2)};
+        }
+        // Only remove margin if setting is true
+        @if $headers-remove-margin-when-aligned {
+          @if ($flex-titles == 'align-items' or $flex-titles == 'align-items') {
+            --base-text-margin-top: 0; // !This could have unwanted side effects
+            --base-text-margin-bottom: 0; // !This could have unwanted side effects
+          }
         }
         #{$flex-prop-target}: $flex-val;
       }
@@ -29,8 +36,17 @@
       @each $flex-titles, $values2 in $values1 {
         @each $flex-spec, $flex-val in $values2 {
           .#{$flex-titles}-#{$bp}-#{$flex-spec} {
-            @if ($flex-titles == 'gap') {
+            @if ($flex-titles == 'gap' or $flex-titles == 'gap-col') {
               --gap-offset: #{calc($flex-val / 2)};
+            }
+            // Only remove margin if setting is true
+            @if $headers-remove-margin-when-aligned {
+              @if (
+                $flex-titles == 'align-items' or $flex-titles == 'align-items'
+              ) {
+                --base-text-margin-top: 0; // !This could have unwanted side effects
+                --base-text-margin-bottom: 0; // !This could have unwanted side effects
+              }
             }
             #{$flex-prop-target}: $flex-val;
           }
@@ -51,4 +67,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+@each $bp, $px in $breakpoints {
+  @include respond-to(#{$px}) {
+    .flex-#{$bp}-center {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+  }
 }
