--- a/styles/sass_framework/index.scss
+++ b/styles/sass_framework/index.scss
@@ -1,6 +1,4 @@
-@import './abstract/variables';
-@import './abstract/mixins';
-@import './abstract/functions';
+@import './abstract/';
 
 @import './reset/reset';
 
