--- a/styles/sass_framework/components/index.scss
+++ b/styles/sass_framework/components/index.scss
@@ -3,6 +3,7 @@
 @import './calendar';
 @import './inputs';
 @import './links';
+@import './loader';
 @import './masonry-gallery';
 @import './nav';
 @import './select';
