--- a/styles/sass_framework/components/_buttons.scss
+++ b/styles/sass_framework/components/_buttons.scss
@@ -35,6 +35,8 @@ button {
       lighten($btn-primary-bg, 10%)
     )};
 
+  --loader-color: var(--btn-color);
+
   cursor: pointer;
   display: inline-block;
   position: relative;
@@ -257,7 +259,7 @@ button {
   min-height: 55px;
   font-size: 20px;
   line-height: calc(20px * 1.5);
-  border: 4px solid var(--border-color);
+  border: 0px solid var(--border-color);
   border-radius: 9999px;
   transition: box-shadow 200ms ease-in-out, color 200ms ease-in-out,
     border-color 200ms ease-in-out, transform 200ms ease-in-out;
