--- a/styles/sass_framework/utils/_overflow.scss
+++ b/styles/sass_framework/utils/_overflow.scss
@@ -1,3 +1,9 @@
 .overflow-hidden {
   overflow: hidden;
 }
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+.overflow-y-hidden {
+  overflow-y: hidden;
+}
